[package]
name = "grepowski"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4.5.51", features = ["derive", "env"] }
crossterm = { version = "0.29.0" }
ratatui = { version = "0.29.0"}
reqwest = { version = "0.12.24" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["macros", "rt"] }

