[package]
name = "grepowski"
version = "0.2.0"
edition = "2024"
authors = ["Stephan Roslen"]
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4.5.51", features = ["derive", "env"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
ratatui = { version = "0.29.0" }
reqwest = { version = "0.12.24" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
syntect = { version = "5.3.0" }
syntect-tui = { version = "3.0.6" }
tachyonfx = { version = "0.20.1", features = ["sendable"] }
tokio = { version = "1.48.0", features = ["macros", "rt"] }

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
